discussion/kv_engine/170541/170541_rev22_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49512: Remove tasks from custom cpuPool queue on unregister

We just need to clean up the task but we currently do so by
running it, meaning that we must wait for other tasks to
complete first. Instead, remove the tasks from the queue and
tidy them up manually.

Change-Id: Id3f52a07d693d98510ab6b3f918ad4beb1b8721d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-02-16 19:08:55.000000000
Message: 
Uploaded patch set 22.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-16 19:29:34.000000000
Message: 
Patch Set 22: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15669/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15669/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15669/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16487/ : FAILURE

Failure of GoogleTest "STParamMagmaBucketTest/STParamMagmaBucketTest.MB_47566/persistent_magma_full_eviction":

<pre>
[ RUN      ] STParamMagmaBucketTest/STParamMagmaBucketTest.MB_47566/persistent_magma_full_eviction
[2022-02-16T19:22:33.689Z] ../kv_engine/engines/ep/tests/module_tests/magma_bucket_tests.cc:554: Failure
[2022-02-16T19:22:33.689Z] Value of: result
[2022-02-16T19:22:33.689Z]   Actual: true
[2022-02-16T19:22:33.689Z] Expected: false
[2022-02-16T19:22:33.689Z] [  FAILED  ] STParamMagmaBucketTest/STParamMagmaBucketTest.MB_47566/persistent_magma_full_eviction, where GetParam() = ("persistent_magma", "full_eviction") (59 ms)
STParamMagmaBucketTest/STParamMagmaBucketTest.MB_47566/persistent_magma_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16487/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14516/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44004/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37096/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5318/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17424/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17742/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18460/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5379/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25826/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
